--- a/style.css
+++ b/style.css
@@ -95,6 +95,16 @@ body.dark-mode header {
     background-color: #ffffff;
     color: #000000;
 
+    .bloco5{
+    text-align: center;
+    border: 2px solid #415A77;
+    border-radius: 20px;
+    padding: 10px;
+    width: 650px;
+    max-width: 100%; /* Limite máximo de largura */
+    background-color: #ffffff;
+    color: #000000;
+    }
 
 body.dark-mode .bloco3 {
     background-color: #2c3e50;
